--- a/app/templates/components/rental-tile.hbs
+++ b/app/templates/components/rental-tile.hbs
@@ -4,5 +4,6 @@
   {{else}}
     <button {{action 'imageShow'}}>show image</button>
   {{/if}}
+  {{update-rental rental=rental update="update"}}
   <button {{action 'delete' rental}}>delete</button>
 </li>
