--- a/app/templates/components/rental-tile.hbs
+++ b/app/templates/components/rental-tile.hbs
@@ -1,9 +1,7 @@
-<li>{{rental.owner}}'s {{rental.type}} in {{rental.city}}
+<li>{{#link-to 'rental' rental.id}}{{rental.owner}}'s {{rental.type}} in {{rental.city}} {{/link-to}}
   {{#if isImageShowing }}
     <p><img src={{rental.image}} alt={{rental.type}} {{action 'imageHide'}}></p>
   {{else}}
-    <button {{action 'imageShow'}}>show image</button>
+    <button {{action 'imageShow'}} >show image</button>
   {{/if}}
-  {{update-rental rental=rental update="update"}}
-  <button {{action 'delete' rental}}>delete</button>
 </li>
