update embeefire and firebase

--- a/app/templates/components/new-rental.hbs
+++ b/app/templates/components/new-rental.hbs
@@ -26,5 +26,5 @@
     </form>
   </div>
 {{else}}
-  <button {{action 'rentalFormShow'}}>new rental</button>
+  <button {{action 'rentalFormShow'}}>New Rental</button>
 {{/if}}
