--- a/app/templates/city.hbs
+++ b/app/templates/city.hbs
@@ -3,3 +3,9 @@
 {{new-rental save2="save3" city=model}}
 
 <!-- {{city-tile city=model destroyCity="destroyCity"}} -->
+
+<ul>
+  {{#each model.rentals as |rental|}}
+     {{rental-tile rental=rental}}
+  {{/each}}
+</ul>
